@@ -83,6 +83,7 @@ following names for their contribution to the product.
 * Jeremy Baron
 * Jidanni
 * Jimmy Xu
+* Jools Wills
 * Karun Dambietz
 * Kim Hyun-Joon
 * liangent
